--- a/templates/dadaportal/navlinks.html
+++ b/templates/dadaportal/navlinks.html
@@ -2,6 +2,7 @@
   <li><a href="{% url 'dadaportal/recommended' %}">Recommended</a></li>
   &bull; <li><a href="{% url 'mail/index' %}">Mail</a></li>
   &bull; <li><a href="{% url 'articles/index' %}">Articles</a></li>
+  &bull; <li><a href="/!/contact/">Contact</a></li>
   {% comment %}
   &bull; <li><a href="/schedule/">Schedule</a></li>
   &bull; <li><a href="/!/about/">About</a></li>
