--- a/templates/dadaportal/recommended.html
+++ b/templates/dadaportal/recommended.html
@@ -5,6 +5,14 @@
 
   <section class="column">
     <h2>Popular</h2>
+    <p>Music</p>
+    <ul>
+      <li><a href="/!/user-2015/">Plotting data as music videos in R</a>
+      <li><a href="/!/sheetmusic/">sheetmusic</a>
+      <li><a href="/!/twinkle/">Twinkle</a></li>
+      <li><a href="/!/christmas-gifts/">Christmas gifts</a></li>
+      <li><a href="/!/fms-symphony/">USA spending</a></li>
+    </ul>
     <p>Data science</p>
     <ul>
       <li><a href="/!/web-sites-to-data-tables-in-depth/">Web sites to data tables, in depth</a></li>
@@ -13,13 +21,6 @@
       <li><a href="/!/variables/">Two meanings of "variable"</a></li>
       <li><a href="/!/r-spells-for-data-wizards/">R Spells for Data wizards</a></li>
       <li><a href="/!/print-formaldehyde/">Artisan spreadsheets</a>
-    </ul>
-    <p>Music</p>
-    <ul>
-      <li><a href="/!/sheetmusic/">sheetmusic</a>
-      <li><a href="/!/twinkle/">Twinkle</a></li>
-      <li><a href="/!/christmas-gifts/">Christmas gifts</a></li>
-      <li><a href="/!/fms-symphony/">USA spending</a></li>
     </ul>
     <p>Open openness</p>
     <ul>
