--- a/dadaportal/render/templates/_base.html
+++ b/dadaportal/render/templates/_base.html
@@ -1,14 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    {% include '_meta.html' %}
     <link rel="stylesheet" href="/static/style.css" type="text/css" />
-    <title>{{ title }}</title>
-    <meta content="{{ description }}" name="description">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta charset="utf-8">
-    <meta content="Dada Portal" name="generator">
-    <meta content="Thomas Levine" name="author">
-    <link href="/static/favicon.ico" rel="icon" type="image/x-icon">
   </head>
   <body>
     <nav>
@@ -18,7 +12,7 @@
       </ul>
     </nav>
     <main role="main">
-      {{ base }}
+      {% block main %}{% endblock %}
     </main>
   </body>
 </html>
