--- a/dadaportal/render/templates/_meta.html
+++ b/dadaportal/render/templates/_meta.html
@@ -4,4 +4,4 @@
     <meta charset="utf-8">
     <meta content="Dada Portal" name="generator">
     <meta content="Thomas Levine" name="author">
-    <link href="/static/favicon.ico" rel="icon" type="image/x-icon">
+    <link href="/lib/favicon.ico" rel="icon" type="image/x-icon">
