--- a/dadaportal/render/templates/big.html
+++ b/dadaportal/render/templates/big.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   {% include '_meta.html' %}
-  <link href="/static/big.css" rel="stylesheet" type="text/css" />
-  <script src="/static/big.js"></script>
+  <link href="/lib/big.css" rel="stylesheet" type="text/css" />
+  <script src="/lib/big.js"></script>
 </head>
 <body>
   {% block main %}{{ body|safe }}{% endblock %}
