--- a/dadaportal/render/templates/_base.html
+++ b/dadaportal/render/templates/_base.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     {% include '_meta.html' %}
-    <link rel="stylesheet" href="/static/style.css" type="text/css" />
+    <link rel="stylesheet" href="/lib/style.css" type="text/css" />
   </head>
   <body>
     <nav>
