--- a/dadaportal/render/templates/article.html
+++ b/dadaportal/render/templates/article.html
@@ -9,7 +9,6 @@
     &bull; <a href="{% url 'articles/source' source %}">View source</a>
     {% if other_source %}&bull; <a href="{{ other_source }}">Other source</a>{% endif %}
     #}
-    &bull; <a href="?slides">Slides</a>
-    &bull; <a href="../s/{{ slug }}/">Slides</a>
+    &bull; <a href="{{ slides_url }}">Slides</a>
 </footer>
 {% endblock %}
