--- a/dadaportal/render/templates/article.html
+++ b/dadaportal/render/templates/article.html
@@ -3,7 +3,7 @@
 <article>
   {{body|safe}}
 </article>
-{% if slug %}
+{% if include_footer %}
 <footer>
     Last modified <time datetime="{{ modified_c }}">{{ modified }}</time>
     {#
