change slides link

--- a/dadaportal/render/templates/article.html
+++ b/dadaportal/render/templates/article.html
@@ -10,7 +10,7 @@
     &bull; <a href="{% url 'articles/source' source %}">View source</a>
     {% if other_source %}&bull; <a href="{{ other_source }}">Other source</a>{% endif %}
     #}
-    &bull; <a href="/s/{{ slug }}/">Slides</a>
+    &bull; <a href="slides/">Slides</a>
 </footer>
 {% endif %}
 {% endblock %}
