--- a/dadaportal/render/templates/_meta.html
+++ b/dadaportal/render/templates/_meta.html
@@ -1,5 +1,5 @@
-    <title>{{ title }}</title>
-    <meta content="{{ description }}" name="description">
+    <title>{{ title|e }}</title>
+    <meta content="{{ description|e }}" name="description">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <meta content="Dada Portal" name="generator">
