--- a/dadaportal/render/templates/_base.html
+++ b/dadaportal/render/templates/_base.html
@@ -8,7 +8,7 @@
     <nav>
       <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="/!/contact/">Contact</a></li>
+        <li><a href="/!/about/">About Tom</a></li>
       </ul>
     </nav>
     <main role="main">
